--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Prehistoric Mammals</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
@@ -10,51 +10,53 @@
   <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet">
 </head>
 <body>
+  <main>
 
-  <header>
-    <h1>Prehistoric Animals</h1>
-  </header>
+    <div class="gutter-1-2 pad-t-1-2">
+      <h1 class="push-0">Prehistoric mammals</h1>
+    </div>
 
-  <div>
-    <ol class="grid">
+    <div class="gutter-1-2 pad-t pad-b">
+      <ol class="grid">
 
-      <li class="unit">
-        <div class=>
-          <img src="images/arsinoitherium.jpg">
-          <h2>Arsinoitherium</h2>
-          <p>Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
-          <a href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Arsinoitherium</a>
-        </div>
-      </li>
+        <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2">
+          <div class="">
+            <img src="images/arsinoitherium.jpg" class="img-flex">
+            <h2>Arsinoitherium</h2>
+            <p>Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
+            <a href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Arsinoitherium</a>
+          </div>
+        </li>
 
-      <li class="unit">
-        <div class=>
-          <img src="images/elasmotherium.jpg">
-          <h2>Elasmotherium</h2>
-          <p>Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
-          <a href="https://en.wikipedia.org/wiki/Elasmotherium">Learn more about Elasmotherium</a>
-        </div>
-      </li>
+        <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2">
+          <div class=>
+            <img src="images/elasmotherium.jpg" class="img-flex">
+            <h2>Elasmotherium</h2>
+            <p>Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
+            <a href="https://en.wikipedia.org/wiki/Elasmotherium">Learn more about Elasmotherium</a>
+          </div>
+        </li>
 
-      <li class="unit">
-        <div class=>
-          <img src="images/glyptodon.jpg">
-          <h2>Glyptodon</h2>
-          <p>Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
-          <a href="https://en.wikipedia.org/wiki/Glyptodon">Learn more about Glyptodon<a>
-        </div>
-      </li>
+        <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2">
+          <div class="island-1-2">
+            <img src="images/glyptodon.jpg" class="img-flex">
+            <h2>Glyptodon</h2>
+            <p>Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
+            <a href="https://en.wikipedia.org/wiki/Glyptodon">Learn more about Glyptodon<a>
+          </div>
+        </li>
 
-      <li class="unit">
-        <div class=>
-          <img src="images/megatherium.jpg">
-          <h2>Megatherium</h2>
-          <p>Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
-          <a href="https://en.wikipedia.org/wiki/Megatherium">Learn more about Megatherium</a>
-        </div>
-      </li>
+        <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2">
+          <div class=>
+            <img src="images/megatherium.jpg" class="img-flex">
+            <h2>Megatherium</h2>
+            <p>Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
+            <a href="https://en.wikipedia.org/wiki/Megatherium">Learn more about Megatherium</a>
+          </div>
+        </li>
 
-    </ol>
-  </div>
+      </ol>
+    </div>
+  </main>
 </body>
 </html>
