--- a/index.html
+++ b/index.html
@@ -12,51 +12,48 @@
 <body>
   <main>
 
-    <div class="gutter-1-2 pad-t-1-2">
-      <h1 class="push-0">Prehistoric mammals</h1>
-    </div>
+    <h1 class="push-0 pad-b-1-4 gutter-1-2 pad-t-1-2">Prehistoric mammals</h1>
 
-    <div class="gutter-1-2 pad-t pad-b">
-      <ol class="grid">
+    <ol class="grid grid-stretch gutter-1-2 pad-t-1-2 pad-b-1-2">
 
-        <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2">
-          <div class="">
-            <img src="images/arsinoitherium.jpg" class="img-flex">
-            <h2>Arsinoitherium</h2>
-            <p>Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
-            <a href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Arsinoitherium</a>
-          </div>
-        </li>
+      <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+        <div class="">
+          <img src="images/arsinoitherium.jpg" alt="" class="img-flex pad-b-1-2">
+          <h2 class="giga push-1-2">Arsinoitherium</h2>
+          <p class="push-1-2">Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
+          <a href="https://en.wikipedia.org/wiki/Arsinoitherium" class="mega">Learn more about Arsinoitherium</a>
+        </div>
+      </li>
 
-        <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2">
-          <div class=>
-            <img src="images/elasmotherium.jpg" class="img-flex">
-            <h2>Elasmotherium</h2>
-            <p>Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
-            <a href="https://en.wikipedia.org/wiki/Elasmotherium">Learn more about Elasmotherium</a>
-          </div>
-        </li>
+      <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+        <div class="">
+          <img src="images/elasmotherium.jpg" alt="" class="img-flex pad-b-1-2">
+          <h2 class="giga push-1-2">Elasmotherium</h2>
+          <p class="push-1-2">Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
+          <a href="https://en.wikipedia.org/wiki/Elasmotherium" class="mega">Learn more about Elasmotherium</a>
+        </div>
+      </li>
 
-        <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2">
-          <div class="island-1-2">
-            <img src="images/glyptodon.jpg" class="img-flex">
-            <h2>Glyptodon</h2>
-            <p>Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
-            <a href="https://en.wikipedia.org/wiki/Glyptodon">Learn more about Glyptodon<a>
-          </div>
-        </li>
+      <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+        <div class="">
+          <img src="images/glyptodon.jpg" alt="" class="img-flex pad-b-1-2">
+          <h2 class="giga push-1-2">Glyptodon</h2>
+          <p class="push-1-2">Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
+          <a href="https://en.wikipedia.org/wiki/Glyptodon" class="mega">Learn more about Glyptodon</a>
+        </div>
+      </li>
 
-        <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2">
-          <div class=>
-            <img src="images/megatherium.jpg" class="img-flex">
-            <h2>Megatherium</h2>
-            <p>Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
-            <a href="https://en.wikipedia.org/wiki/Megatherium">Learn more about Megatherium</a>
-          </div>
-        </li>
+      <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+        <div class="">
+          <img src="images/megatherium.jpg" alt="" class="img-flex pad-b-1-2">
+          <h2 class="giga push-1-2">Megatherium</h2>
+          <p class="push-1-2">Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
+          <a href="https://en.wikipedia.org/wiki/Megatherium" class="mega">Learn more about Megatherium</a>
+        </div>
+      </li>
 
-      </ol>
-    </div>
+    </ol>
+
   </main>
 </body>
 </html>
