--- a/index.html
+++ b/index.html
@@ -12,42 +12,42 @@
 <body>
   <main>
 
-    <h1 class="push-0 pad-b-1-4 gutter-1-2 pad-t-1-2">Prehistoric mammals</h1>
+    <h1 class="push-0 island-1-2">Prehistoric mammals</h1>
 
-    <ol class="grid grid-stretch gutter-1-2 pad-t-1-2 pad-b-1-2">
+    <ol class="grid grid-stretch gutter-1-4 pad-t-1-4">
 
-      <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-        <div class="">
+      <li class="unit push gutter-1-4 unit-content-distribute xs-1 s-1 m-1-2 l-1-2">
+        <div class="card island-1-2 content-fill unit-content-distribute">
           <img src="images/arsinoitherium.jpg" alt="" class="img-flex pad-b-1-2">
-          <h2 class="giga push-1-2">Arsinoitherium</h2>
-          <p class="push-1-2">Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
+          <h2 class="giga push-0 pad-b-1-2">Arsinoitherium</h2>
+          <p class="kilo push-0 pad-b-1-2">Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
           <a href="https://en.wikipedia.org/wiki/Arsinoitherium" class="mega">Learn more about Arsinoitherium</a>
         </div>
       </li>
 
-      <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-        <div class="">
+      <li class="unit push gutter-1-4 unit-content-distribute xs-1 s-1 m-1-2 l-1-2">
+        <div class="card island-1-2 content-fill unit-content-distribute">
           <img src="images/elasmotherium.jpg" alt="" class="img-flex pad-b-1-2">
-          <h2 class="giga push-1-2">Elasmotherium</h2>
-          <p class="push-1-2">Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
+          <h2 class="giga push-0 pad-b-1-2">Elasmotherium</h2>
+          <p class="kilo push-0 pad-b-1-2">Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
           <a href="https://en.wikipedia.org/wiki/Elasmotherium" class="mega">Learn more about Elasmotherium</a>
         </div>
       </li>
 
-      <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-        <div class="">
+      <li class="unit push gutter-1-4 unit-content-distribute xs-1 s-1 m-1-2 l-1-2">
+        <div class="card island-1-2 content-fill unit-content-distribute">
           <img src="images/glyptodon.jpg" alt="" class="img-flex pad-b-1-2">
-          <h2 class="giga push-1-2">Glyptodon</h2>
-          <p class="push-1-2">Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
+          <h2 class="giga push-0 pad-b-1-2">Glyptodon</h2>
+          <p class="kilo push-0 pad-b-1-2">Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
           <a href="https://en.wikipedia.org/wiki/Glyptodon" class="mega">Learn more about Glyptodon</a>
         </div>
       </li>
 
-      <li class="unit card push island-1-2 xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-        <div class="">
+      <li class="unit push gutter-1-4 unit-content-distribute xs-1 s-1 m-1-2 l-1-2">
+        <div class="card island-1-2 content-fill unit-content-distribute">
           <img src="images/megatherium.jpg" alt="" class="img-flex pad-b-1-2">
-          <h2 class="giga push-1-2">Megatherium</h2>
-          <p class="push-1-2">Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
+          <h2 class="giga push-0 pad-b-1-2">Megatherium</h2>
+          <p class="kilo push-0 pad-b-1-2">Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
           <a href="https://en.wikipedia.org/wiki/Megatherium" class="mega">Learn more about Megatherium</a>
         </div>
       </li>
